11/27/13 add enums for graph type and units
11/27/13 move PHMeter to basics.model
11/27/13 don't use PHMeter model element in 'Solutions' and 'Custom' screens
11/27/13 generalize OnOffSwitch and ChoiceSwitch
11/27/13 implement the iOS-like switch for the graph options
11/26/13 add placeholder for 'ratio' feature
11/26/13 use CSS to color-code the 'H3O+/OH- ratio' label
11/26/13 make exponents smaller using CSS in 'Molecule count' view
11/26/13 add 'Molecule count' view
11/26/13 add color-coding to 'H3O+/OH- ratio' label
11/26/13 fix colors, sample using sRBG
11/26/13 adjust colors of atoms
11/26/13 nodes for atoms and molecules
11/26/13 change order of beaker controls
11/25/13 Solutions: make beaker slightly shorter to accommodate control panel below beaker
11/25/13 add beaker controls to 'Solutions' screen
11/25/13 add graph placeholder to 'Custom' screen
11/25/13 revert to using same color for drain cleaner and battery acid, this was intentional
11/25/13 Basics: make 'milk' the initial solute
11/25/13 use smaller default font for title(s) on ExpandCollapseBar
11/25/13 Basics: hide pointer on pH meter when it's not displaying a value
11/25/13 Basics: move water faucet down a bit
11/25/13 move 'Water' label on faucet
11/25/13 remove 'decoration' option from scenery-phet.FaucetNode
11/22/13 Solutions: adjust layout and sizes of match design doc
11/22/13 add 'rightTitle' option to ExpandCollapseBar
11/21/13 Solutions: add expand/collapse bar for graph
11/21/13 add optional 'rightTitle' to ExpandCollapseBar, to support graphs
11/21/13 Solutions: add placeholder (rectangle) for graph, in order to work on general layout
11/21/13 Solutions: expand/collapse bar for pH meter
11/21/13 implement pH meter for 'Solutions' screen
11/21/13 set up model and view for 'Solutions' screen
11/21/13 make 'Neutral' label optional on PHScaleNode, since it's only labeled in 'Basics' sim
11/21/13 change request: 'spit' color should be closer to 'water', try RGB=200,230,230